fixed a bug when no subrace is present

--- a/dev/dev_races_json.ipynb
+++ b/dev/dev_races_json.ipynb
@@ -23,7 +23,8 @@
     "\n",
     "See here for reference: \n",
     "- https://dungeonsdragons.fandom.com/wiki/List_of_Dungeons_%26_Dragons_5th_edition_character_classes#Subclasses\n",
-    "- https://github.com/5e-bits/5e-database/blob/main/src/5e-SRD-Classes.json"
+    "- https://github.com/5e-bits/5e-database/blob/main/src/5e-SRD-Classes.json\n",
+    "- resource: https://5e-bits.github.io/docs/introduction"
    ]
   },
   {
@@ -81,12 +82,12 @@
     "my_race_db = {'Dwarf': {'subrace': ['Hill-Dwarf', 'Mountain-Dwarf']},\n",
     "              'Elf': {'subrace': ['High-Elf', 'Wood-Elf', 'Dark-Elf']},\n",
     "              'Halfling': {'subrace': ['Lightfoot-Halfling', 'Stout-Halfling']},\n",
-    "              'Human': {'subrace': '-'},\n",
-    "              'Dragonborn': {'subrace': '-'},\n",
+    "              'Human': {'subrace': ['-']},\n",
+    "              'Dragonborn': {'subrace': ['-']},\n",
     "              'Gnome': {'subrace': ['Rock-Gnome', 'Forest-Gnome']},\n",
-    "              'Half-Elf': {'subrace': '-'},\n",
-    "              'Half-Orc': {'subrace': '-'},\n",
-    "              'Tiefling': {'subrace': '-'}\n",
+    "              'Half-Elf': {'subrace': ['-']},\n",
+    "              'Half-Orc': {'subrace': ['-']},\n",
+    "              'Tiefling': {'subrace': ['-']}\n",
     "              }"
    ]
   },
